--- a/apps/docs/pages/static-api/data-catalogue/response-format.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/response-format.en.mdx
@@ -25,8 +25,5 @@ All API responses from the Data Catalogue API are returned in JSON format. Below
 
 The response consists of two main elements:
 
-- `meta` - This element contains lightweight meta information, providing details about the requested resource.
-- `data` - This element represents the requested resource, which may include additional information based on the provided query parameters.
-  It's important to note that while the meta element provides essential information about the resource, there is also a separate endpoint available to retrieve more detailed information. You can access this endpoint [here](TODO: add link here).
-
-We provide the OpenAPI in JSON format to ensure ease of use and compatibility with a wide range of programming languages and applications. If you have any questions or encounter any issues, please feel free to contact us.
+- `meta` - lightweight meta information about the requested resource.
+- `data` - this element represents the requested resource, which may include additional information based on the provided query parameters.
