--- a/apps/docs/pages/overview/quickstart.en.mdx
+++ b/apps/docs/pages/overview/quickstart.en.mdx
@@ -5,6 +5,20 @@ The Open API is flexible and can be used both with and without an API token. To 
 For new users, we recommend starting without authentication as it simplifies the initial learning process.
 However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [request for an API token](/overview/authentication).
 
+## Sending a Request
+
+To retrieve data from the API, you need to send an HTTP GET request to a specific endpoint. Here's an example of a request:
+
+```http
+GET https://datagovmy.app/catalogue?id=fuelprice&limit=3
+```
+
+In this example:
+
+- The base URL is `https://datagovmy.app`.
+- The specific API endpoint is `/catalogue`.
+- The query parameters used are `id` and `limit`.
+
 ## Postman Collection
 
 We recommend starting your exploration of the OpenAPI by interacting with our Postman collection.
