--- a/apps/docs/pages/static-api/data-catalogue/example-requests.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/example-requests.en.mdx
@@ -1,1 +1,6 @@
-## Searchable columns
+## Constructing a Valid Request
+
+TODO: should not be markdown, instead has to be interactive request (user can click send, and returns results)
+or should it be hardcoded
+
+Reference: [Mixpanel query tester](https://developer.mixpanel.com/reference/segmentation-query)
