--- a/apps/docs/pages/static-api/data-catalogue/response-format.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/response-format.en.mdx
@@ -2,19 +2,19 @@
 
 After sending an API request, you will receive a response with the following codes and headers, which indicate the status of your request:
 
-| Code |      Status       |                                                     Description                                                      |
-| :--: | :---------------: | :------------------------------------------------------------------------------------------------------------------: |
-| 200  |        OK         |                                                 Successful Request.                                                  |
-| 400  |    Bad Request    |                              Invalid request. Check error message for more information.                              |
-| 401  |   Unauthorized    |                    Authentication failed. Check [Authentication](...) guide for more information.                    |
-| 403  |     Forbidden     |                                           Restricted access this resource.                                           |
-| 404  |     Not Found     |                                        The resource requested doesn’t exist.                                         |
+| Code |      Status       | Description                                                                                                          |
+| :--: | :---------------: | -------------------------------------------------------------------------------------------------------------------- |
+| 200  |        OK         | Successful Request.                                                                                                  |
+| 400  |    Bad Request    | Invalid request. Check error message for more information.                                                           |
+| 404  |     Not Found     | The resource requested doesn’t exist.                                                                                |
 | 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](...) to increase usage limits. |
-| 500  |   Server Error    |               Something went wrong with OpenAPI! Please [contact us](...) if you encounter this error.               |
+| 500  |   Server Error    | Something went wrong with OpenAPI! Please [contact us](...) if you encounter this error.                             |
 
-## Response format
+## Response Format
 
-All API responses from the Data Catalogue API are returned in JSON format. Below is an example of the structure of the response format:
+### Valid Response
+
+When you make a successful request to the Data Catalogue API, you will receive a response with a status code of `200`. Here is the structure of the response format:
 
 ```JSON
 {
@@ -23,7 +23,21 @@ All API responses from the Data Catalogue API are returned in JSON format. Below
 }
 ```
 
-The response consists of two main elements:
+- `meta` - This field indicates lightweight meta information about the requested resource.
+- `data` - This field represents the requested resource, which may include additional information based on the provided query parameters.
 
-- `meta` - lightweight meta information about the requested resource.
-- `data` - this element represents the requested resource, which may include additional information based on the provided query parameters.
+### Error Response
+
+In case of an error, the Data Catalogue API will return an error response in JSON format. The error response will contain the following elements:
+
+```json
+{
+    status: <int>,
+    errors: [...],
+}
+```
+
+- `status` - This field indicates the response code corresponding to the error.
+- `errors` - This field provides an array of error messages or descriptions.
+
+The error response is designed to help you identify and troubleshoot the issue you encountered with your API requests.
