--- a/apps/docs/pages/index.en.mdx
+++ b/apps/docs/pages/index.en.mdx
@@ -4,9 +4,7 @@ Welcome to the official documentation for Malaysia's national open API! This com
 
 ## What is the Open API?
 
-The Open API built by the Malaysian government is a RESTful API that utilizes the Django framework. It is primarily focused on the "GET" method, which means it is designed to retrieve data (the "R" in "CRUD" operations). This API has been developed with the objective of providing transparent data access to all citizens, enabling them to access various data sets, such as data catalogs, transportation data, weather data, and more.
-
-The Open API offers several key features and benefits:
+The Open API built by the Malaysian government is a RESTful API that utilizes the Django framework. It is primarily focused on the "GET" method, which means it is designed to retrieve data (the "R" in "CRUD" operations). This API has been developed with the objective of providing transparent data access to all citizens, with the following goals in mind:
 
 - **Transparent Data Access:** The API provides citizens with a user-friendly way to access a wide range of data sets, promoting transparency and enabling informed decision-making.
 
