--- a/apps/docs/pages/overview/authentication.en.mdx
+++ b/apps/docs/pages/overview/authentication.en.mdx
@@ -1,10 +1,22 @@
-### Requesting a Token
+## Requesting an API Token
 
-While users can access the OpenAPI without an API token, if you anticipate reaching the rate limits or require increased usage, you have the option to request an API token. Tokens are granted on a case-by-case basis to prevent abuse. To request an API token, please reach out to us at [Contact Us](TODO: update contact link). Our team will assist you in obtaining a token based on your application requirements.
+While accessing the OpenAPI does not require an API token, we provide the option to request a token if you anticipate reaching the rate limits or need increased usage. To request an API token, please follow the steps below:
 
-### Using Your Token
+1. Send an email to [token@dtsa.gov.my](...) with the following details:
 
-Once you have obtained a token, you need to include it in your API requests. Follow the steps below to include the token in your HTTP requests:
+   - Your name
+   - Your email address
+   - Reason for requesting an increased rate limit
+
+2. Our team will review your request and assess it on a case-by-case basis.
+
+3. If your request is approved, you will receive an API token via email.
+
+Requesting an API token allows us to ensure fair usage and prevent abuse, while providing you with the necessary resources to meet your application requirements.
+
+## Using Your API Token
+
+Once you have obtained an API token, you need to include it in your API requests to authenticate and gain access to increased usage limits. Follow the steps below to include your API token in the HTTP requests:
 
 1. Add the following header to your request:
 
@@ -12,8 +24,8 @@ Once you have obtained a token, you need to include it in your API requests. Fol
    Authorization: Bearer YOUR_TOKEN_HERE
    ```
 
-   Make sure to replace `YOUR_TOKEN_HERE` with the actual token you received.
+   Replace `YOUR_TOKEN_HERE` with the actual token you received.
 
 2. Send your HTTP request with the added `Authorization` header.
 
-By including the token in the `Authorization` header, you authenticate your requests and gain access to increased usage limits.
+By including the API token in the `Authorization` header, you ensure that your requests are authenticated and have the necessary privileges to access the OpenAPI with increased usage limits.
