--- a/apps/docs/pages/overview/authentication.en.mdx
+++ b/apps/docs/pages/overview/authentication.en.mdx
@@ -21,10 +21,10 @@ Once you have obtained an API token, you need to include it in your API requests
 1. Add the following header to your request:
 
    ```
-   Authorization: Bearer YOUR_TOKEN_HERE
+   Authorization: Bearer <YOUR_TOKEN_HERE>
    ```
 
-   Replace `YOUR_TOKEN_HERE` with the actual token you received.
+   Replace `<YOUR_TOKEN_HERE>` with the actual token you received.
 
 2. Send your HTTP request with the added `Authorization` header.
 
