--- a/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
@@ -26,33 +26,33 @@ The `filter` parameter allows you to refine your API request by applying specifi
 #### String Equal filter
 
 ```
-value@column
+<value>@<column>
 ```
 
 - This format filters the data based on an exact string match.
-- The `value` represents the desired string value within the `column`.
-- The `column` denotes the column to be filtered.
+- The `<value>` represents the desired string value within the `<column>`.
+- The `<column>` denotes the column to be filtered.
 - Example: `filter=John@name` retrieves data where the value of the "name" column is "John".
 
 #### Range Filter
 
 ```
-column[begin:end]
+<column>[<begin>:<end>]
 ```
 
 - This format filters the data within a specified numeric range.
-- The `column` specifies the column to be filtered.
-- The `begin` and `end` values define the numeric range.
+- The `<column>` specifies the column to be filtered.
+- The `<begin>` and `<end>` values define the numeric range.
 - Example: `filter=age[18:30]` retrieves data where the value of the `age` column falls between 18 and 30 (inclusive).
 
 ### `sort`
 
 ```
-sort=column@order
+sort=<column>@<order>
 ```
 
-- `column` represents the column by which to sort.
-- `order` can be either `asc` (ascending) or `desc` (descending).
+- `<column>` represents the column by which to sort.
+- `<order>` can be either `asc` (ascending) or `desc` (descending).
 - Nested sorting is supported by using space-separated queries, e.g. <nobr>`sort=column1@asc column2@desc`</nobr>.
 - Example: `sort=name@asc` sorts the results by the "name" column in ascending order.
 
