--- a/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
@@ -22,3 +22,4 @@ To determine the available resources and their corresponding IDs and fields, you
 By visiting the Data Catalogue page, you can browse through the available resources and explore their details. Each resource will have a unique ID that you can use when making requests to the Data Catalogue API. Additionally, you can view the fields or columns associated with each resource, which will help you understand the structure of the data and what information is available.
 
 Make sure to regularly check the Data Catalogue page for any updates or new additions to the catalogue, as it will provide the most up-to-date information about the available resources and their corresponding IDs and fields.
+**TODO: suggested to use a changelog?**
