--- a/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
@@ -25,56 +25,73 @@ The `filter` parameter allows you to refine your API request by applying specifi
 
 #### String Equal filter
 
-```
+```http
+### Syntax
 <value>@<column>
+
+### Example
+GET .../catalogue?id=fuelprice&filter=level@series_type
 ```
 
 - This format filters the data based on an exact string match.
 - The `<value>` represents the desired string value within the `<column>`.
 - The `<column>` denotes the column to be filtered.
-- Example: `filter=John@name` retrieves data where the value of the "name" column is "John".
 
 #### Range Filter
 
-```
+```http
+### Syntax
 <column>[<begin>:<end>]
+
+### Example
+GET .../catalogue?id=fuelprice&filter=ron95[0:1]
 ```
 
 - This format filters the data within a specified numeric range.
 - The `<column>` specifies the column to be filtered.
 - The `<begin>` and `<end>` values define the numeric range.
-- Example: `filter=age[18:30]` retrieves data where the value of the `age` column falls between 18 and 30 (inclusive).
 
 ### `sort`
 
-```
-sort=<column>@<order>
+```http
+### Syntax
+<column>@<order>
+
+### Example
+GET .../catalogue?id=fuelprice&sort=ron95@asc
 ```
 
 - `<column>` represents the column by which to sort.
 - `<order>` can be either `asc` (ascending) or `desc` (descending).
-- Nested sorting is supported by using space-separated queries, e.g. <nobr>`sort=column1@asc column2@desc`</nobr>.
-- Example: `sort=name@asc` sorts the results by the "name" column in ascending order.
+- Nested sorting is supported by using space-separated queries, e.g. <nobr>`sort=ron95@asc date@desc`</nobr>.
 
 ### `include` and `exclude`
 
-```
+```http
+### Syntax
 include=<column1,column2,...>
 exclude=<column1,column2,...>
+
+### Example
+GET .../catalogue?id=fuelprice&include=ron95,ron97
+GET .../catalogue?id=fuelprice&exclude=diesel
 ```
 
 - `<column1, column2, ...>` specifies the columns to be included or excluded.
 - Multiple columns can be separated by commas.
-- Example: `include=name,age` includes only the "name" and "age" columns in the results.
+- When both `include` and `exclude` parameters are provided, `include` takes precedence over `exclude`, such that only fields specified in `include` will be shown.
 
 ### `start` and `end`
 
-```
+```http
+### Syntax
 start=<start_date>
 end=<end_date>
+
+### Example
+GET .../catalogue?id=fuelprice&start=2022-01-01&end=2022-12-31
 ```
 
 - `<start_date>` and `<end_date>` represent the start and end dates of the desired date range.
 - The dates must be in a format compatible with the data being queried.
 - The data will be filtered to include dates greater than or equal to `<start_date>` and less than or equal to `<end_date>`.
-- Example: `start=2022-01-01&end=2022-12-31` filters the results to include data from January 1, 2022 to December 31, 2022.
