--- a/apps/docs/pages/static-api/transport/gtfs-static/request-query.en.mdx
+++ b/apps/docs/pages/static-api/transport/gtfs-static/request-query.en.mdx
@@ -8,7 +8,7 @@ The GTFS Static API provides access to public transportation data represented as
 GET .../gtfs
 ```
 
-If there are no GTFS data type specified, the above request will simply return the full GTFS static data in ZIP format.
+- If no GTFS data type is specified, the above request will return the complete GTFS dataset in ZIP format.
 
 ### Available GTFS Static Types
 
@@ -28,7 +28,7 @@ The API supports the following GTFS data types:
 | stops       | Information about transit stops                  |
 | trips       | Specific trips with associated route information |
 
-For example, the following query is used to find out which transport agencies are available:
+For example, to retrieve information about transit agencies, you can use the following query:
 
 ```http
 GET .../gtfs/agency
@@ -38,17 +38,20 @@ GET .../gtfs/agency
 
 ### `download`
 
+To control the format of the returned data, you can include the `download` parameter in your query.
+
 ```http
 GET .../gtfs/<gtfs_type>?download=true
-### Returns data in original .txt format
-
-GET .../gtfs/<gtfs_type>?download=false
-GET .../gtfs/<gtfs_type>
-### Returns data in JSON format
 ```
 
-- GTFS static originally in .txt format, users can download the text by using `download=True`
-- By default, or when `download` is set to false, the data is returned in JSON format.
+- This query will provide a download link for the GTFS data in its original .txt format.
+
+```http
+GET .../gtfs/<gtfs_type>?download=false
+GET .../gtfs/<gtfs_type>
+```
+
+- By default, or when `download` is set to false, the data will be returned in JSON format.
 
 ### `area`
 
@@ -57,26 +60,25 @@ GET .../gtfs/<gtfs_type>?area=<state>
 ```
 
 - To filter the GTFS data based on a specific state, you can include the `area` parameter in your query.
-- `<state>` refers to Malaysian states abbreviated into three letters, e.g. Johor is `jhr`.
-- Currently, only `jhr` is supported.
+- Use the three-letter abbreviation for the state.
+- Currently, only the state of Johor (`jhr`) is supported.
 
 ### Filtering by Fields
-
-| GTFS Type   | Available Fields                                                                                                         |
-| ----------- | ------------------------------------------------------------------------------------------------------------------------ |
-| agency      | agency_id, agency_name, agency_url, agency_timezone, agency_phone, agency_lang                                           |
-| calendar    | service_id, monday, tuesday, wednesday, thursday, friday, saturday, sunday, start_date, end_date                         |
-| frequencies | trip_id, start_time, end_time, headway_secs, exact_times                                                                 |
-| routes      | route_id, agency_id, route_short_name, route_long_name, route_desc, route_type, route_url, route_color, route_text_color |
-| stop_times  | trip_id, arrival_time, departure_time, stop_id, stop_sequence, stop_headsign, pickup_type, shape_dist_traveled           |
-| stops       | stop_id, stop_code, stop_name, stop_desc, stop_lat, stop_lon, zone_id, stop_url, location_type, parent_station           |
-| trips       | route_id, service_id, trip_id, trip_headsign, direction_id, block_id, shape_id, wheelchair_accessible                    |
-
-Based on the above table, you can filter the datasets
 
 ```http
 GET .../gtfs/<gtfs_type>?<field>=<value>
 ```
 
-- (explain a bit in point forms)
-- If there are invalid field names, a `400 Bad Request` response will be given.
+Refer to the table below for the available fields for each GTFS type:
+
+| GTFS Type   | Available Fields                                                                                                                           |
+| ----------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
+| agency      | `agency_id`, `agency_name`, `agency_url`, `agency_timezone`, `agency_phone`, `agency_lang`                                                 |
+| calendar    | `service_id`, `monday`, `tuesday`, `wednesday`, `thursday`, `friday`, `saturday`, `sunday`, `start_date`, `end_date`                       |
+| frequencies | `trip_id`, `start_time`, `end_time`, `headway_secs`, `exact_times`                                                                         |
+| routes      | `route_id`, `agency_id`, `route_short_name`, `route_long_name`, `route_desc`, `route_type`, `route_url`, `route_color`, `route_text_color` |
+| stop_times  | `trip_id`, `arrival_time`, `departure_time`, `stop_id`, `stop_sequence`, `stop_headsign`, `pickup_type`, `shape_dist_traveled`             |
+| stops       | `stop_id`, `stop_code`, `stop_name`, `stop_desc`, `stop_lat`, `stop_lon`, `zone_id`, `stop_url`, `location_type`, `parent_station`         |
+| trips       | `route_id`, `service_id`, `trip_id`, `trip_headsign`, `direction_id`, `block_id`, `shape_id`, `wheelchair_accessible`                      |
+
+For further details about each field's definition and usage, please refer to the official [GTFS Documentation](https://developers.google.com/transit/gtfs/reference#field_definitions) provided by Google.
