docs: update content and mark todos

--- a/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
@@ -8,7 +8,7 @@ GET https://datagovmy.app/catalogue
 
 The Data Catalogue API is designed to allow users to access data from the data catalogue programmatically. It provides a set of endpoints that can be used to query the data based on various parameters and filters. The API is meant for use by developers and data scientists who want to programmatically access the data catalogue, although users who want to download data directly can also refer to the Data Catalogue page.
 
-### How do I know what resources are available?
+### TODO: How do I know what resources are available?
 
 <b>
 TODO: maybe we should provide searchable columns in a new section here (reference: [openfda](https://open.fda.gov/apis/drug/event/searchable-fields/))
