--- a/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/request-query.en.mdx
@@ -107,5 +107,5 @@ GET .../catalogue?id=fuelprice&start=2022-01-01&end=2022-12-31
 ```
 
 - `<start_date>` and `<end_date>` represent the start and end dates of the desired date range.
-- The dates must be in a format compatible with the data being queried.
+- The dates must be in a format compatible with the data being queried. TODO: update this with specific format once BE updates.
 - The data will be filtered to include dates greater than or equal to `<start_date>` and less than or equal to `<end_date>`.
