--- a/apps/docs/pages/static-api/transport/gtfs-static/overview.en.mdx
+++ b/apps/docs/pages/static-api/transport/gtfs-static/overview.en.mdx
@@ -6,7 +6,8 @@ GET https://datagovmy.app/gtfs
 
 ## What does GTFS Static do?
 
-The GTFS Static API provides access to standardized public transportation schedules and geographic information, following the General Transit Feed Specification (GTFS). To learn more about GTFS and its specifications, you can visit the [GTFS documentation](https://developers.google.com/transit/gtfs) by Google.
+The GTFS Static API provides access to standardized public transportation schedules and geographic information, following the General Transit Feed Specification (GTFS).
+To learn more about GTFS and its specifications, you can visit the [GTFS documentation](https://developers.google.com/transit/gtfs) provided by Google.
 
 ### Transport agencies involved
 
@@ -16,9 +17,9 @@ The GTFS-Static API incorporates data from various transport agencies. Agencies 
 - **Prasarana**: A public transport operator responsible for managing various modes of transportation, including LRT (Light Rail Transit), MRT (Mass Rapid Transit), monorail, and bus services.
 - **myBAS Johor Bahru**: A bus service operator in Johor Bahru, Malaysia, providing bus transportation on 19 routes across 5 corridors, including Kota Tinggi, Masai, Kulai, Gelang Patah, and Pontian.
 
-### Update frequency
+### TODO: Update frequency
 
-_TODO: be less vague and give actual frequency!_
+_TODO: be less vague and give actual frequency!_ (maybe should have a changelog?)
 
 - updated x time a year etc.
 - we recommend checking y times per day
