--- a/apps/docs/pages/overview/rate-limit.en.mdx
+++ b/apps/docs/pages/overview/rate-limit.en.mdx
@@ -11,4 +11,4 @@ The following table outlines the throttling limits for different APIs within Ope
 | GTFS-Static    | No                 | 4 requests per minute  |
 | GTFS-Static    | Yes                | 10 requests per minute |
 
-Please note that the throttling limits vary based on whether you are using an API token or not. If you anticipate exceeding the throttling limits without an API token, we recommend requesting an API token as mentioned in the previous section.
+Please note that the throttling limits vary based on whether you are using an API token or not. If you anticipate exceeding the throttling limits without an API token, we recommend [requesting an API token](/overview/authentication).
