--- a/apps/docs/pages/static-api/transport/gtfs-static/response-format.en.mdx
+++ b/apps/docs/pages/static-api/transport/gtfs-static/response-format.en.mdx
@@ -2,13 +2,13 @@
 
 After sending an API request, you will receive a response with the following codes and headers, which indicate the status of your request:
 
-| Code |      Status       | Description                                                                                                          |
-| :--: | :---------------: | -------------------------------------------------------------------------------------------------------------------- |
-| 200  |        OK         | Successful Request.                                                                                                  |
-| 400  |    Bad Request    | Invalid request. Check error message for more information.                                                           |
-| 404  |     Not Found     | The resource requested doesn’t exist.                                                                                |
-| 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](...) to increase usage limits. |
-| 500  |   Server Error    | Something went wrong with OpenAPI! Please [contact us](...) if you encounter this error.                             |
+| Code |      Status       | Description                                                                                                                               |
+| :--: | :---------------: | ----------------------------------------------------------------------------------------------------------------------------------------- |
+| 200  |        OK         | Successful Request.                                                                                                                       |
+| 400  |    Bad Request    | Invalid request. Check error message for more information.                                                                                |
+| 404  |     Not Found     | The resource requested doesn’t exist.                                                                                                     |
+| 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](/overview/authentication) to increase usage limits. |
+| 500  |   Server Error    | Something went wrong with OpenAPI! Please [contact us](TODO:add_contact) if you encounter this error.                                     |
 
 ## Response Format
 
