further descriptive improvements

--- a/apps/docs/pages/index.en.mdx
+++ b/apps/docs/pages/index.en.mdx
@@ -1,6 +1,6 @@
 # Introduction
 
-Welcome to the official documentation for Malaysia's national open API! This comprehensive resource is designed to provide you with all the information you need to effectively utilize the Open API developed by the Malaysian government. Whether you are a developer, data scientist, or a citizen interested in accessing transparent data, this documentation will serve as your guide to leveraging the power of the Open API.
+Welcome to the documentation for the Open API of Malaysia's official open data portal! This comprehensive resource is designed to provide you with all the information you need to effectively utilize the Open API developed by the Malaysian government. Whether you are a developer, data scientist, or a citizen interested in accessing transparent data, this documentation will serve as your guide to leveraging the power of the Open API.
 
 ## What is the Open API?
 
