--- a/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
@@ -1,7 +1,7 @@
-## API Endpoint
+## The Data Catalogue API Endpoint
 
 ```http
-GET https://datagovmy.app/catalogue
+GET https://api.data.gov.my/catalogue
 ```
 
 ## What does Data Catalogue API do?
@@ -10,16 +10,8 @@ The Data Catalogue API is designed to allow users to access data from the data c
 
 ### TODO: How do I know what resources are available?
 
-<b>
-TODO: maybe we should provide searchable columns in a new section here (reference: [openfda](https://open.fda.gov/apis/drug/event/searchable-fields/))
-
-TODO: referring to opendosm, full fields may not be available in Data Catalogue page, perhaps we should add them there (along with clearer `id`)
-
-</b>
-
 To determine the available resources and their corresponding IDs and fields, you can refer to the Data Catalogue page. The Data Catalogue page provides a comprehensive list of all the resources available in the catalogue, along with their associated IDs and fields.
 
 By visiting the Data Catalogue page, you can browse through the available resources and explore their details. Each resource will have a unique ID that you can use when making requests to the Data Catalogue API. Additionally, you can view the fields or columns associated with each resource, which will help you understand the structure of the data and what information is available.
 
 Make sure to regularly check the Data Catalogue page for any updates or new additions to the catalogue, as it will provide the most up-to-date information about the available resources and their corresponding IDs and fields.
-**TODO: suggested to use a changelog?**
