--- a/apps/docs/pages/static-api/transport/gtfs-static/overview.en.mdx
+++ b/apps/docs/pages/static-api/transport/gtfs-static/overview.en.mdx
@@ -1,7 +1,7 @@
-## API Endpoint
+## The GTFS Static API Endpoint
 
 ```http
-GET https://datagovmy.app/gtfs
+GET https://api.data.gov.my/gtfs
 ```
 
 ## What does GTFS Static do?
