--- a/apps/docs/pages/overview/quickstart.en.mdx
+++ b/apps/docs/pages/overview/quickstart.en.mdx
@@ -2,26 +2,26 @@
 
 The Open API is flexible and can be used both with and without an API token. To ensure responsible usage and prevent abuse, there are limits on the number of requests users can make.
 
-For new users, we recommend starting without authentication as it simplifies the initial learning process.
+For new users, we recommend starting without authentication as it simplifies the initial set up process.
 However, if you find yourself needing more functionality beyond the limitations of unauthenticated access, you have the option to [request for an API token](/overview/authentication).
 
 ## Sending a Request
 
-To access the OpenAPI, always use the base URL https://datagovmy.app to send a HTTP GET request. When making API requests, prepend this base URL to the specific API endpoints you want to access. Here's an example of a request that returns a maximum of 3 fuel price records, using the [Data Catalogue API](/static-api/data-catalogue/overview):
+To access the Open API, always use the base URL https://api.data.gov.my to send a HTTP GET request. When making API requests, prepend this base URL to the specific API endpoints you want to access. Here's an example of a request that returns a maximum of 3 fuel price records, using the [Data Catalogue API](/static-api/data-catalogue/overview):
 
 ```http
-GET https://datagovmy.app/catalogue?id=fuelprice&limit=3
+GET https://api.data.gov.my/catalogue?id=fuelprice&limit=3
 ```
 
 In this example:
 
-- The base URL is `https://datagovmy.app`.
+- The base URL is `https://api.data.gov.my`.
 - The specific API endpoint is `/catalogue`.
 - The query parameters used are `id` and `limit`.
 
 ## Postman Collection
 
-We recommend starting your exploration of the OpenAPI by interacting with our Postman collection.
+We recommend starting your exploration of the Open API by interacting with our Postman collection.
 The collection provides an interactive environment where you can send requests and receive real-time responses.
 It offers comprehensive examples of all available endpoints, allowing you to experiment, replicate requests, and customize them to meet your specific needs.
 
